force-app/main/default/objects/OSPA_Award__c/OSPA_Award__c.object-meta.xml
<CustomObject>
    <label>OSPA Award</label>
    <nameField>
        <displayFormat>OSPA-{00000}</displayFormat>
        <label>Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OSPA Awards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>