force-app/main/default/objects/OSPA_Award__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AS</fullName>
                <label>Academic Support</label>
            </value>
            <value>
                <fullName>IS</fullName>
                <label>Instructional Support</label>
            </value>
            <value>
                <fullName>IN</fullName>
                <label>Instruction</label>
            </value>
            <value>
                <fullName>PS</fullName>
                <label>Public Service</label>
            </value>
            <value>
                <fullName>RS</fullName>
                <label>Research</label>
            </value>
            <value>
                <fullName>SF</fullName>
                <label>Scholarships &amp; Fellowships</label>
            </value>
            <value>
                <fullName>SA</fullName>
                <label>Student Financial Aid</label>
            </value>
            <value>
                <fullName>SS</fullName>
                <label>Student Services</label>
            </value>
            <value>
                <fullName>OM</fullName>
                <label>Operations &amp; Maintenance</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>