force-app/main/default/objects/OSPA_Award__c/fields/Award_Register_Date__c.field-meta.xml
<CustomField>
    <fullName>Award_Register_Date__c</fullName>
    <label>Award Register Date</label>
    <type>Date</type>
</CustomField>