force-app/main/default/objects/OSPA_Award__c/fields/Award_Status__c.field-meta.xml
<CustomField>
    <fullName>Award_Status__c</fullName>
    <label>Award Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>Active</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Closed</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Purged from KFS</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>Executed</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>Final</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>