force-app/main/default/objects/OSPA_Award__c/fields/Award_Title__c.field-meta.xml
<CustomField>
    <fullName>Award_Title__c</fullName>
    <label>Award Title</label>
    <type>TextArea</type>
</CustomField>