force-app/main/default/objects/OSPA_Award__c/fields/Direct_Amount__c.field-meta.xml
<CustomField>
    <fullName>Direct_Amount__c</fullName>
    <label>Direct Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>