force-app/main/default/objects/OSPA_Award__c/fields/Lead_Org_Department__c.field-meta.xml
<CustomField>
    <fullName>Lead_Org_Department__c</fullName>
    <label>Lead Org Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>00059</fullName>
                <label>Accounting</label>
            </value>
            <value>
                <fullName>00060</fullName>
                <label>Aerospace Engineering</label>
            </value>
            <value>
                <fullName>00061</fullName>
                <label>Aes Admin Control</label>
            </value>
            <value>
                <fullName>00062</fullName>
                <label>Ag &amp; Biosystems Engineering</label>
            </value>
            <value>
                <fullName>00063</fullName>
                <label>Ag Education &amp; Studies</label>
            </value>
            <value>
                <fullName>00187</fullName>
                <label>Agricultural &amp; Biosystems Engineering-ae</label>
            </value>
            <value>
                <fullName>00179</fullName>
                <label>Agricultural &amp; Biosystems Engineering-en</label>
            </value>
            <value>
                <fullName>00064</fullName>
                <label>Agronomy</label>
            </value>
            <value>
                <fullName>00180</fullName>
                <label>Agronomy-aes</label>
            </value>
            <value>
                <fullName>00065</fullName>
                <label>Airworthiness Assurance Ctr For Excellnc</label>
            </value>
            <value>
                <fullName>00066</fullName>
                <label>Ames Laboratory</label>
            </value>
            <value>
                <fullName>00181</fullName>
                <label>Ames Laboratory Doe-vpr</label>
            </value>
            <value>
                <fullName>00067</fullName>
                <label>Animal Science</label>
            </value>
            <value>
                <fullName>00165</fullName>
                <label>Animal Science-aes</label>
            </value>
            <value>
                <fullName>00068</fullName>
                <label>Anthropology</label>
            </value>
            <value>
                <fullName>00069</fullName>
                <label>Apparel, Events &amp; Hospitality Mgmt</label>
            </value>
            <value>
                <fullName>00070</fullName>
                <label>Architecture</label>
            </value>
            <value>
                <fullName>00071</fullName>
                <label>Art &amp; Design</label>
            </value>
            <value>
                <fullName>00072</fullName>
                <label>Art &amp; Visual Culture</label>
            </value>
            <value>
                <fullName>00150</fullName>
                <label>Athletic Department</label>
            </value>
            <value>
                <fullName>00161</fullName>
                <label>Biocentury Research Farm</label>
            </value>
            <value>
                <fullName>00166</fullName>
                <label>Biocentury Research Farm-aes</label>
            </value>
            <value>
                <fullName>00001</fullName>
                <label>Biochemistry &amp; Biophysics</label>
            </value>
            <value>
                <fullName>00002</fullName>
                <label>Bioeconomy Institute</label>
            </value>
            <value>
                <fullName>00199</fullName>
                <label>Bioeconomy Institute-vpr</label>
            </value>
            <value>
                <fullName>00003</fullName>
                <label>Biomedical Sciences</label>
            </value>
            <value>
                <fullName>00200</fullName>
                <label>Biomedical Sciences-vet</label>
            </value>
            <value>
                <fullName>00004</fullName>
                <label>Biosafety Inst For Gen Mod Ag Prod</label>
            </value>
            <value>
                <fullName>00005</fullName>
                <label>Biotechnology</label>
            </value>
            <value>
                <fullName>00159</fullName>
                <label>C C Catt Center</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>