force-app/main/default/objects/OSPA_Award__c/fields/Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Sponsor__c</fullName>
    <label>Sponsor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>OSPA Awards (Sponsor)</relationshipLabel>
    <relationshipName>OSPA_Awards2</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>