force-app/main/default/objects/OSPA_Award__c/fields/Sponsor_Award__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Award__c</fullName>
    <label>Sponsor Award</label>
    <type>TextArea</type>
</CustomField>