force-app/main/default/objects/OSPA_Award__c/fields/Sponsor_Type__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Type__c</fullName>
    <formula>TEXT(Sponsor__r.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sponsor Type</label>
    <type>Text</type>
</CustomField>