force-app/main/default/objects/OSPA_Award__c/listViews/Created_This_Month.listView-meta.xml
<ListView>
    <fullName>Created_This_Month</fullName>
    <columns>NAME</columns>
    <columns>PI__c</columns>
    <columns>Sponsor__c</columns>
    <columns>Sponsor_Award__c</columns>
    <columns>Sponsor_Type__c</columns>
    <columns>Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Created This Month</label>
</ListView>